[tool.poetry]
name = "pyds"
version = "0.1.0"
description = ""
authors = ["Rafael <tecinfo.rafael@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
mypy = "^0.930"

[tool.poetry.dev-dependencies]
pytest = "^6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
